# TP-Final-Taller-I

./: CMakeLists.txt  README.md  acido.cpp  acido.h  bloque.cpp  bloque.h  bloque_metal_diagonal.cpp  bloque_metal_diagonal.h  bloque_roca.cpp  bloque_roca.h  bola_energia.cpp  bola_energia.h  boton.cpp  boton.h  compuerta.cpp  compuerta.h  configuration.yaml  constantes.h  elemento_bloque.cpp  elemento_bloque.h  emisor_energia.h  entidad.h  entidad_con_movimiento.cpp  entidad_con_movimiento.h  entidad_sin_movimiento.cpp  entidad_sin_movimiento.h  estado_bloque.h  estado_bloque_libre.cpp  estado_bloque_libre.h  estado_bloque_ocupado.cpp  estado_bloque_ocupado.h  exceptions.h  portal.cpp  portal.h  posicion.cpp  posicion.h  receptor_energia.h  roca.cpp  roca.h
Common/: AcceptSocket.cpp  CMakeLists.txt  HandshakeHandler.cpp  HandshakeHandler.h  ProtectedBlockingQueue.cpp  ProtectedBlockingQueue.h  Protocol.cpp  Protocol.h  SafeQueue.cpp  SafeQueue.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  exceptions.h
Common/ProtocolTranslator/: AcidDTO.cpp  AcidDTO.h  ButtonDTO.cpp  ButtonDTO.h  ButtonStateDTO.cpp  ButtonStateDTO.h  CMakeLists.txt  ChellDTO.cpp  ChellDTO.h  DropRockDTO.h  EnergyBallDTO.cpp  EnergyBallDTO.h  EnergyBarrierDTO.cpp  EnergyBarrierDTO.h  EnergyReceiverActivateDTO.cpp  EnergyReceiverActivateDTO.h  EnergyReceiverDTO.cpp  EnergyReceiverDTO.h  EnergyTransmitterActivateDTO.cpp  EnergyTransmitterActivateDTO.h  EnergyTransmitterDTO.cpp  EnergyTransmitterDTO.h  GateDTO.cpp  GateDTO.h  GateStateDTO.cpp  GateStateDTO.h  JumpDTO.cpp  LiftRockDTO.cpp  LiftRockDTO.h  MetalBlockDTO.cpp  MetalBlockDTO.h  MetalDiagonalBlockDTO.cpp  MetalDiagonalBlockDTO.h  MoveLeftDTO.cpp  MoveRightDTO.cpp  PinToolDTO.cpp  PinToolDTO.h  PlayerChellIdDTO.cpp  PortalDTO.cpp  PortalDTO.h  (+13 more)
SDL/: .gitignore  AnimatedSprite.cpp  AnimatedSprite.h  BlockView.cpp  BlockView.h  BlockViewMetal.cpp  BlockViewMetal.h  BlockViewRock.cpp  BlockViewRock.h  CMakeLists.txt  Camera.cpp  Camera.h  ChellAnimationView.cpp  ChellAnimationView.h  EventCaptured.h  Makefile  Position.cpp  Position.h  Renderer.cpp  Renderer.h  SDLException.cpp  Sprite.cpp  Sprite.h  TextureFactory.cpp  TextureFactory.h  View.cpp  View.h  Window.h  WorldView.cpp  WorldView.h  errorbind.cpp  errorbind.h  errorcreate.cpp  errorcreate.h  errorlisten.cpp  errorlisten.h  main.cpp  parser.py  portal sprites  socket.cpp  (+3 more)
SDL/View/: BlockViewMetal.cpp  BlockViewMetal.h  BlockViewRock.cpp  BlockViewRock.h  ChellAnimationView.h  View.cpp  View.h
Server/: CMakeLists.txt  Chell.cpp  Chell.h  ClientTest.cpp  Collidable.h  Configuration.cpp  Configuration.h  ContactListener.cpp  ContactListener.h  DTOProcessor.cpp  DTOProcessor.h  EnergyBall.cpp  EnergyBall.h  Event.cpp  Event.h  GameThread.cpp  GameThread.h  Lobby.cpp  Lobby.h  PinTool.cpp  PinTool.h  Player.cpp  Player.h  Portal.cpp  Portal.h  PositionTranslator.cpp  PositionTranslator.h  Processor.cpp  Processor.h  ReceiverThread.cpp  ReceiverThread.h  ServerMain.cpp  ServerTest.cpp  Stage.cpp  Stage.h  World.cpp  World.h  WorldObjectDTOTranslator.cpp  WorldObjectDTOTranslator.h  configuration.yaml  (+1 more)
Server/CollidableData/: BoxCreator.cpp  BoxCreator.h  CollidableData.h  YamlParser.cpp  YamlParser.h
Server/Config/: config.yaml  indiv-one.yaml  indiv-two.yaml  multi-one.yaml  space.yaml
Server/EnergyBlocks/: EnergyReceiver.cpp  EnergyReceiver.h  EnergyTransmitter.cpp  EnergyTransmitter.h
Server/GroundBlocks/: MetalBlock.cpp  MetalBlock.h  MetalDiagonalBlock.cpp  MetalDiagonalBlock.h  RockBlock.cpp  RockBlock.h
Server/Model/: BodyCreator.cpp  BodyCreator.h  Cake.cpp  Cake.h  Chell.cpp  Chell.h  Collidable.h  ContactListener.cpp  EnergyBall.cpp  EnergyBall.h  PinTool.cpp  PinTool.h  Portal.cpp  Portal.h  RayCastCallback.cpp  RayCastCallback.h  World.cpp  World.h  WorldObjectsStorage.cpp  WorldObjectsStorage.h  constants.h
Server/Obstacles/: Acid.cpp  Acid.h  Button.cpp  Button.h  EnergyBarrier.cpp  EnergyBarrier.h  Gate.cpp  Gate.h  Rock.cpp  Rock.h
Server/YamlData/: AcidData.h  ButtonData.cpp  CMakeLists.txt  CakeData.cpp  CakeData.h  ChellData.cpp  ChellData.h  EnergyBarrierData.cpp  EnergyBarrierData.h  EnergyTransmitterData.cpp  EnergyTransmitterData.h  MetalBlockData.cpp  MetalBlockData.h  MetalDiagonalBlockData.cpp  MetalDiagonalBlockData.h  RockBlockData.cpp  RockBlockData.h  RockData.cpp  RockData.h  YamlParser.cpp  YamlParser.h
Tests/: CMakeLists.txt  ClientTest.cpp  FakeServer.cpp  MyTestSuite.h  TestButton.h  TestCake.h  TestChell.h  TestEnergyBall.h  TestEnergyBallAndEnergyReceiver.h  TestEnergyBallAndEnergyTransmitter.h  TestEnergyReceiver.h  TestGate.h  TestMain.cpp  TestProtocolTranslator.h  TestRock.h  TestStage.h  TestWorld.h  TestWorldObjectDTOTranslator.h  TestYamlParser.h  test.yaml  test_1.h  test_chell.h  test_main.cpp  test_rock_block.h  test_stage.h
Tests/CPPTests/: TestButton.h  TestCake.h  TestChell.h  TestEnergyBall.h  TestEnergyBallAndEnergyReceiver.h  TestEnergyBallAndEnergyTransmitter.h  TestEnergyReceiver.h  TestGate.h  TestPortal.h  TestPositionTranslator.h  TestProtocolTranslator.h  (+5 more)
client/: .gitignore  CMakeLists.txt  Camera.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  CommandReceiver.cpp  CommandReceiver.h  CommandSender.cpp  CommandSender.h  EventCaptured.cpp  FakeChellNewPosition.cpp  FakeChellNewPosition.h  FakeServer.cpp  FakeServer.h  GUIReceiver.cpp  GUIReceiver.h  GameController.cpp  GameController.h  Makefile  SDL_Runner.cpp  SDL_Runner.h  SpriteFactory.cpp  SpriteFactory.h  TextureFactory.cpp  TextureFactory.h  WorldView.cpp  WorldView.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minimal.supp
src/: CMakeLists.txt  Chell.cpp  Chell.h  ClientTest.cpp  ContactListener.cpp  ContactListener.h  EnergyBall.cpp  EnergyBall.h  Game.cpp  Game.h  PinTool.h  Portal.cpp  Portal.h  ServerTest.cpp  Stage.cpp  Stage.h  World.cpp  World.h  chell.cpp  chell.h  configuration.yaml  constants.h  contact_listener.cpp  contact_listener.h  energy_ball.cpp  exceptions.h  portal.cpp  protocol_macros.h  stage.cpp  stage.h
(+362 files in other folders)
